fix: PP-3103 Flatten the module structure (and maintain Docker friendliness)

--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,26 @@
 {
-  "name": "sharethis/share-buttons",
-  "description": "Share Buttons from ShareThis.",
+  "name": "sharethis/sharebuttons",
+  "description": "ShareThis Share Buttons",
+  "require": {
+    "php": "~7.4.0||~8.1.0"
+  },
   "type": "magento2-module",
   "version": "1.0.0",
-  "license": "ISC",
+  "license": "proprietary",
   "authors": [
     {
-      "name": "Scott Weaver",
-      "email": "sweaver@sharethis.com",
+      "name": "ShareThis",
+      "email": "support@sharethis.com",
       "homepage": "https://sharethis.com",
-      "role": "Developer"
+      "role": "Technical Support"
     }
   ],
   "autoload": {
     "files": [
       "registration.php"
-    ],
+    ],`
     "psr-4": {
-      "ShareThis\\ShareButtons\\": "ShareThis/ShareButtons"
+      "ShareThis\\ShareButtons\\": "."
     }
   }
 }
