--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,18 @@ services:
       - db
     env_file:
       - env
-    volumes: # TODO: Move ./ShareThis/ShareButtons/ items to root (if possible).
-      - ./ShareThis:/var/www/html/app/code/ShareThis/
+    volumes:
+      - ./Block:/var/www/html/app/code/ShareThis/ShareButtons/Block
+      - ./etc:/var/www/html/app/code/ShareThis/ShareButtons/etc
+      - ./Helper:/var/www/html/app/code/ShareThis/ShareButtons/Helper
+      - ./Model:/var/www/html/app/code/ShareThis/ShareButtons/Model
+      - ./Plugin:/var/www/html/app/code/ShareThis/ShareButtons/Plugin
+      - ./Service:/var/www/html/app/code/ShareThis/ShareButtons/Service
+      - ./vendor:/var/www/html/app/code/ShareThis/ShareButtons/vendor
+      - ./view:/var/www/html/app/code/ShareThis/ShareButtons/view
+      - ./composer.json:/var/www/html/app/code/ShareThis/ShareButtons/composer.json
+      - ./composer.lock:/var/www/html/app/code/ShareThis/ShareButtons/composer.lock
+      - ./registration.php:/var/www/html/app/code/ShareThis/ShareButtons/registration.php
   db:
     container_name: st_mysql
     image: mysql:5.6.23
@@ -18,6 +28,7 @@ services:
       - db-data:/var/lib/mysql/data
     env_file:
       - env
+
   phpmyadmin:
     container_name: st_phpmyadmin
     image: phpmyadmin/phpmyadmin
