chore: PP-3103 Augment description in composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "sharethis/magento-sharethis-sharebuttons",
-  "description": "ShareThis Share Buttons",
+  "description": "ShareThis Share Buttons for Magento",
   "require": {
     "php": "~7.4.0||~8.1.0"
   },
